dwk1/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashgenerator-svc
spec:
  type: ClusterIP
  selector:
    app: hashgenerator
  ports:
    - name: http
      protocol: TCP
      port: 1234
      targetPort: 8000
