dwk1/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hashgenerator-ingress
spec:
  rules:
  - http:
      paths:
      - path: /log
        pathType: Prefix
        backend:
          service:
            name: hashgenerator-svc
            port:
              number: 1234
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 3456
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rocket-server-svc
            port:
              number: 2345
